portfolio/src/app/section01-hero/section01-hero.component.scss
body {
    background-color:  #141d2f;
    margin: 0;
    height: 100vh;
    background-image: url('./../../assets/purpleshadowmerged.png');
    background-repeat: no-repeat;
    /*background-size: contain; /*Bei Mobilansicht einfach media query size ändern in px*/
    background-size: cover;
    background-position: 50% 100%;
    
}

* {
    box-sizing: border-box;
}

.title-hero {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 90vh;
    font-size: 32px;
    
    .rotate-iam {
        color: white;
        writing-mode: vertical-lr;transform: rotate(-180deg);
        font-size: 67px;
    }
    
    .hero-name {
        color: white;
        font-family: 'Poppins-Regular bold';
       
        .hero-dev {
            color: #4b47ff;
        }
    }

}

.btn-hero {
    display: flex;
    justify-content: center;
    margin-top: -190px;
     
.btn-talk {
    color: white;
    background-color: #01b8e2;
    height: 50px;
    width: 130px;
    border: none;
    border-radius: 8px;
    font-size: 19px;
}
.btn-talk:hover {
    cursor: pointer;
    background-color: #4b47ff;
    transform: scale(1.2) perspective(1px);
    font-size: 23px;
}
}

.bottom-left {
    display: flex;
    align-items: flex-end;
    
    
    .hero-blueline {
        height: 4px;
        color: #01b8e2;
        background-color: #01b8e2;
        width: 100px;
        margin-top: 20vh;
    }
    .hero-icons {
        
        
        img {
            margin-bottom: -2vh;
            margin-left: 5vh;
        }
        img:hover {
            cursor: pointer;
            transform: scale(1.3) perspective(1px);
        }
    }
}

.bottom-right {
    color: white;
    display: flex;
    justify-content: flex-end;
    margin-top: -2.5vh;
    font-size: 22px;
    margin-right: 8vh;
    p {
        margin-right: 5vh;
    }
    img {
        cursor: pointer;
    }
}

@media (max-width: 1000px) {
    .title-hero {
        font-size: 15px;
        .rotate-iam {
            font-size: 30px;
        }
    }

    .btn-hero {
        margin-top: -270px;
    }

    .bottom-right {
        display: none;
    }
}

